tests/negative/runtime/padright_negative_width/input.ci
void main(string[] args) {
    print(padRight("x", -1, " ") + "\n");
}
